--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "body-parser": "^1.19.1",
     "ejs": "^3.1.6",
     "express": "^4.17.2"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
